<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mutation_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="10dp"
    android:theme="@style/SplashTheme"
    android:weightSum="7"
    tools:context=".activities.SequenceAnalysisResults">
        <ScrollView
            android:id="@+id/dash_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:background="@color/colorWhite">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/sequence_analysis_results"
        android:textColor="@color/colorBlack"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/sequence_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sequence_summary"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:textStyle="bold"/>

    </LinearLayout>
    <TextView
        android:id="@+id/pr_included"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pi_major_resistance_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>
    <TextView
        android:id="@+id/rt_included"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pi_accessory_resistance_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>
    <TextView
        android:id="@+id/subt_types"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/sequence_assesment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sequence_quality_assessment"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/no_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chart_unavailable"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sequence_result_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorWhite"
        android:nestedScrollingEnabled="false">

    </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>


</LinearLayout>