<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Verify"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="10"
    android:padding="20dp">
    <ProgressBar
        android:id="@+id/code_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:max="150"
        android:progress="0"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/ver_info_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ver_info"
        android:textColor="@color/colorWhite"
        android:textSize="15sp"
        android:layout_weight="0.2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0.2">
        <EditText
            android:id="@+id/et_ver_code"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/customedge"
            android:hint="@string/ver_code"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorGrey"
            android:textSize="15sp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/custombt"
            android:text="@string/verify"
            android:textColor="@color/colorWhite" />
        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/or_text"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/bt_resend_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_bt_lining"
            android:text="@string/resend_code"
            android:textColor="@color/colorWhite" />
        <Button
            android:id="@+id/bt_login_proceed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/custom_bt_lining"
            android:text="@string/proceed"
            android:visibility="gone"
            android:textColor="@color/colorWhite" />
        <ProgressBar
            android:id="@+id/prog_code"
            style="?android:attr/progressBarStyle"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="6dp"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>