<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/mutation_result"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activities.MutationResultActivity"
    android:weightSum="7"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/drug_resistance_interpretation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/drug_resistance_interpretation"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/db_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/db_version"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/pi_major_resistance_mutations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pi_major_resistance_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>
    <TextView
        android:id="@+id/pi_accessory_resistance_mutations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pi_accessory_resistance_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>
    <TextView
        android:id="@+id/other_mutations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other_mutations"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="start"/>
    <TextView
        android:id="@+id/inhibitor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mutation_scoring"
        android:textSize="13sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/inhibitors_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/colorWhite"
        android:nestedScrollingEnabled="false">

    </androidx.recyclerview.widget.RecyclerView>
    <TableLayout
        android:id="@+id/tableView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/mutation_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mutation_scoring"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="7"
        android:orientation="horizontal"
        android:background="@color/colorGrey"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        >
        <TextView
            android:id="@+id/mutation_scoring"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mutation_scoring"
            android:textSize="13sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_weight="4"
            android:visibility="gone"
            android:textStyle="bold"/>
    </LinearLayout>
    <de.codecrafters.tableview.TableView
        xmlns:table="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_table"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"/>

</LinearLayout>